--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Deploy to my EC2 instance
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.HOST_DNS }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          REMOTE_HOST: ${{ secrets.HOST_DNS }}
+          USERNAME: ${{ secrets.USERNAME }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "."                # Adjust to the files you want to upload
-          target: ${{ secrets.TARGET_DIR }}
+          TRAGET: ${{ secrets.TARGET_DIR }}
 
       - name: Run remote commands on EC2
         uses: appleboy/ssh-action@master
