--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           REMOTE_HOST: ${{ secrets.HOST_DNS }}
           USERNAME: ${{ secrets.USERNAME }}
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           source: "."                # Adjust to the files you want to upload
           TRAGET: ${{ secrets.TARGET_DIR }}
 
@@ -28,7 +28,7 @@ jobs:
         with:
           host: ${{ secrets.HOST_DNS }}
           username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             sudo yum -y update
             sudo yum install -y httpd
